# CALA

./: .dockerignore  .gitignore  Dockerfile  README.md  anki_cards.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  ingest.py  query.py
app/core/: db.py  llm.py  prompts.py
app/schemas/: chat.py  ingest.py  query.py
