[project]
name = "cala-ai"
version = "0.1.0"
description = "Copy of CALA.AI api for interview"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.42.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
